import com.sun.org.apache.xalan.internal.xsltc.compiler.Copy

buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
    }
    dependencies {
        classpath group: 'org.intermine', name: 'plugin', version: System.getProperty("imVersion")
    }
}

ext {
    // set here to make available to individual bio-sources
    bioVersion = System.getProperty("bioVersion")
    imVersion = System.getProperty("imVersion")
}

subprojects {
    group = 'org.intermine'
    version = '1.0.0'

    apply plugin: 'java'
    apply plugin: 'maven'
    apply plugin: 'dbmodel'
    apply plugin: 'biosource-dbmodel'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenLocal()
        mavenCentral()
    }

    configurations {
        bioModel
        mergeModel
    }

    dependencies {
        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.22.1'
        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.22.1'
        compile group: 'org.intermine', name: 'bio-core', version: bioVersion
        compile group: "org.intermine", name: "intermine-resources", version: imVersion // log4j
        compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
        compile group: 'com.opencsv', name: 'opencsv', version: '5.9'
        compile group: 'org.jsoup', name: 'jsoup', version: '1.18.3'
        compile group: 'com.fasterxml.woodstox', name: 'woodstox-core', version: '7.1.0'
        compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.18.2'
        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
        testCompile group: 'junit', name: 'junit', version: '4.8.2'
        testCompile group: "org.intermine", name: "intermine-integrate", version: imVersion, classifier: "testClasses"
        testCompile group: 'xmlunit', name: 'xmlunit', version: '1.0'
        mergeModel group : "org.intermine", name: "intermine-objectstore", version: imVersion
        bioModel group: 'org.intermine', name: 'bio-model', version: bioVersion, transitive: false
    }

    dbModelConfig {
        objectStoreName = "os.bio-test"
        modelName = "genomic"
        defaultInterminePropertiesFile = "default.intermine.bio-test.properties"
    }

// Place this in build.gradle in root of your mine-bio-sources directory, e.g. flymine-bio-sources/build.gradle
// 
// Must be in the subprojects {} section of the build.gradle file
// 
   bioSourceDBModelConfig {
    // file should be in the root of your mine-bio-sources directory
    // TODO: hacky
    // Note: if the source doesn't have an additions file (even empty), these classes don't get added
    globalAdditionsFile = "../mdrmine/dbmodel/resources/mdr.xml"
   }

    task copyMineProperties() {
        dependsOn 'processResources'
        doLast {
            copy {
                from "${System.env.HOME}/.intermine/intermine-bio-test.properties"
                into sourceSets.main.output.resourcesDir
                rename { fileName -> fileName.replace('intermine-bio-test.properties', 'intermine.properties') }
            }
        }
    }

    jar {
        exclude "intermine.properties"
    }

    tasks.withType(Test) {
        scanForTestClasses = false
        include '**/*Test.class'
    }

    test {
        ignoreFailures = true
        forkEvery = 1
    }
}

task testReport(type: TestReport) {
    destinationDir = file("$buildDir/reports/allTests")
    // Include the results from the `test` task in all subprojects
    reportOn subprojects*.test
}
